<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.carlog.chicsign.carlog.Activities.CarLogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_OilPrice"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_oil_price"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:focusable="true"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_liter"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_oil_liter"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:maxLines="1" />

    <Button
        android:id="@+id/edit_dismissBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/input_edit"
        android:textSize="30dp" />

</LinearLayout>
